package com.example.todoc;

public interface OnTaskDeleteClickListener {

    void onDeleteTask(long taskID);
}
